--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@auth0/auth0-spa-js": "^1.11.0",
     "hammerjs": "^2.0.8",
     "ol": "^6.3.1",
     "proj4": "^2.6.1",
