progress group work reordering layers and groups

--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "myOgito:build:production"
+              "browserTarget": "myOgito:build:production",
+              "proxyConfig": "src/proxy.conf.json"
             }
           }
         },
