--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ol": "^6.3.1",
     "proj4": "^2.6.1",
     "rxjs": "~6.5.4",
+    "timers": "^0.1.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
