--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@angular/router": "~11.2.1",
     "@auth0/auth0-spa-js": "^1.11.0",
     "component": "^1.1.0",
-    "ol":  "^6.5.0",
+    "hammerjs": "^2.0.8",
+    "ol": "^6.5.0",
     "proj4": "^2.6.1",
     "rxjs": "~6.5.4",
     "timers": "^0.1.1",
@@ -36,6 +37,7 @@
     "@angular/cli": "^11.2.1",
     "@angular/compiler-cli": "~11.2.1",
     "@angular/language-service": "~11.2.1",
+    "@types/hammerjs": "^2.0.39",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
