--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve ",
-    "start noreload": "ng serve --live-reload false ",
+    "start": "ng serve --proxy-config proxy.json",
+    "start-noreload": "ng serve --no-live-reload --proxy-config proxy.json",
     "build": "ng build ",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,10 +24,13 @@
     "@angular/router": "~11.2.1",
     "@auth0/auth0-spa-js": "^1.11.0",
     "component": "^1.1.0",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "hammerjs": "^2.0.8",
     "ol": "^6.5.0",
     "proj4": "^2.6.1",
     "rxjs": "~6.5.4",
+    "stream": "0.0.2",
     "timers": "^0.1.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
