progress adding sketchlayer, saving and download

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.2.1",
     "@auth0/auth0-spa-js": "^1.11.0",
     "component": "^1.1.0",
+    "file-saver": "^2.0.5",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "hammerjs": "^2.0.8",
