--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "@auth0/auth0-spa-js": "^1.11.0",
+    "@ngx-material-keyboard/core": "^0.1.1",
     "component": "^1.1.0",
     "file-saver": "^2.0.5",
     "graphql": "^15.5.0",
@@ -31,6 +32,7 @@
     "ol": "^6.5.0",
     "proj4": "^2.6.1",
     "rxjs": "~6.5.4",
+    "simple-keyboard": "^3.2.63",
     "stream": "0.0.2",
     "timers": "^0.1.1",
     "tslib": "^1.10.0",
