--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ol": "^6.5.0",
     "proj4": "^2.6.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.6.7",
     "simple-keyboard": "^3.2.63",
     "stream": "0.0.2",
     "timers": "^0.1.1",
@@ -47,7 +48,6 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@types/proj4": "^2.5.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
