--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "stream": "0.0.2",
     "timers": "^0.1.1",
     "tslib": "^1.10.0",
+    "xml2js": "^0.4.23",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
