add missing dotenv dependency

--- a/Upload/package.json
+++ b/Upload/package.json
@@ -9,6 +9,7 @@
   "author": "Arne Vogt",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   }
