--- a/src/assets/configuration/projects.json
+++ b/src/assets/configuration/projects.json
@@ -15,7 +15,10 @@
     "minLat": 32.88,
     "maxLon": 40.18,
     "maxLat": 84.73
-  }
+  },
+  "sketchLayerPolygons": "sketch_polygons",
+  "sketchLayerLinestrings": "sketch_linestrings",
+  "sketchLayerPoints": "sketch_points"
 },
   {
     "name": "OGITO Starter copy",
@@ -27,6 +30,9 @@
     "nameSessionGroup": "Sketch Layers",
     "hiddenLayers" : ["sketch_polygons", "sketch_points", "sketch_linestrings"],
     "backgroundLayers" : [{"title": "OpenStreetMap", "format": "image/jpeg"}],
-    "centerWGS84": {"lat": 51.935, "lon": 7.6521}
+    "centerWGS84": {"lat": 51.935, "lon": 7.6521},
+    "sketchLayerPolygons": "sketch_polygons",
+    "sketchLayerLinestrings": "sketch_linestrings",
+    "sketchLayerPoints": "sketch_points"
   }
 ]
