--- a/src/assets/configuration/appsettings.json
+++ b/src/assets/configuration/appsettings.json
@@ -7,5 +7,9 @@
   "imageUploadFolder":  "/assets/img/userimg/ogito/uploads/",
   "wmsVersion":  "1.3.0",
   "wfsVersion": "1.1.0",
-  "srs": "EPSG:3857"
+  "srs": "EPSG:3857",
+  "auth": {
+    "domain" :"domain",
+    "clientId": "clientid"
+  }
 }
