move upload service to tools folder

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ src/**/*.tif
 src/**/*.tiff
 src/**/*.rrd
 
-/Upload/images
-Upload/node_modules
+tools/image_upload/images
+tools/image_upload/node_modules
 tools/street_names
+
+src/assets/configuration/appsettings.json
