add starter data

--- a/src/assets/configuration/projects.json
+++ b/src/assets/configuration/projects.json
@@ -8,7 +8,7 @@
   "initZoom": 15,
   "nameSessionGroup": "Sketch Layers",
   "hiddenLayers" : ["sketch_polygons", "sketch_points", "sketch_linestrings"],
-  "backgroundLayers" : [{"title": "OpenStreetMap", "format": "image/jpeg"}],
+  "backgroundLayers" : [{"title": "Topographic Map (OSM)", "format": "image/jpeg"}],
   "centerWGS84": {"lat": 51.935, "lon": 7.6521},
   "extentWGS84": {
     "minLon": 7.1,
@@ -24,12 +24,12 @@
     "name": "OGITO Starter copy",
     "qgisProjectFilename": "ogito_starter.qgs",
     "thumbnail": "https://raw.githubusercontent.com/rosaguilar/myogito/master/company_logo.png?token=GHSAT0AAAAAAB7UFEDR7ODZRUTTXZQS6BOUZCJJ5YA",
-    "minZoom": 14,
+    "minZoom": 10,
     "maxZoom": 21,
-    "initZoom": 20,
+    "initZoom": 15,
     "nameSessionGroup": "Sketch Layers",
     "hiddenLayers" : ["sketch_polygons", "sketch_points", "sketch_linestrings"],
-    "backgroundLayers" : [{"title": "OpenStreetMap", "format": "image/jpeg"}],
+    "backgroundLayers" : [{"title": "Topographic Map (OSM)", "format": "image/jpeg"}],
     "centerWGS84": {"lat": 51.935, "lon": 7.6521},
     "sketchLayerPolygons": "sketch_polygons",
     "sketchLayerLinestrings": "sketch_linestrings",
