--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graphql-request": "^3.4.0",
     "hammerjs": "^2.0.8",
     "io-ts": "^2.2.20",
+    "fp-ts": "^2.16.2",
     "ol": "6.5.0",
     "proj4": "^2.6.1",
     "rxjs": "~6.5.4",
@@ -61,6 +62,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.7"
+    "typescript": "~4.0.7",
+    "tslib": "^1.11.1"
   }
 }
