--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@auth0/auth0-spa-js": "^1.11.0",
     "component": "^1.1.0",
     "file-saver": "^2.0.5",
+    "fp-ts": "^2.16.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "hammerjs": "^2.0.8",
     "io-ts": "^2.2.20",
-    "fp-ts": "^2.16.2",
     "ol": "6.5.0",
     "proj4": "^2.6.1",
     "rxjs": "~6.5.4",
