--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@angular/router": "^14.3.0",
     "@auth0/auth0-spa-js": "^2.1.3",
     "component": "^1.1.0",
-    "file-saver": "^2.0.5",
     "fp-ts": "^2.16.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
@@ -37,8 +36,9 @@
     "simple-keyboard": "^3.2.63",
     "stream": "0.0.2",
     "timers": "^0.1.1",
-    "tslib": "^1.10.0",
-    "xml2js": "^0.4.23",
+    "timers-browserify": "^2.0.12",
+    "tslib": "^1.11.1",
+    "xml2js": "^0.6.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -62,7 +62,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4",
-    "tslib": "^1.11.1"
+    "typescript": "~4.6.4"
   }
 }
