--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "simple-keyboard": "^3.2.63",
     "stream": "0.0.2",
     "timers": "^0.1.1",
-    "timers-browserify": "^2.0.12",
-    "tslib": "^1.11.1",
+    "tslib": "^2.6.2",
     "xml2js": "^0.6.2",
     "zone.js": "~0.11.4"
   },
@@ -60,8 +59,8 @@
     "karma-jasmine-html-reporter": "^2.1.0",
     "parcel-bundler": "^1.12.4",
     "protractor": "^7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.6.4"
+    "ts-node": "^10.9.2",
+    "tslint": "^6.1.3",
+    "typescript": "^4.8.4"
   }
 }
