--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "myOgito": {
+    "ogito-app": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/myOgito",
+            "outputPath": "dist/ogito-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -73,11 +73,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "myOgito:build"
+            "browserTarget": "ogito-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "myOgito:build:production",
+              "browserTarget": "ogito-app:build:production",
               "proxyConfig": "src/proxy.json"
             }
           }
@@ -85,7 +85,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "myOgito:build"
+            "browserTarget": "ogito-app:build"
           }
         },
         "test": {
@@ -97,12 +97,12 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "node_modules/ol/ol.css"
+              "src/assets"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ol/ol.css"
             ],
             "scripts": []
           }
@@ -111,11 +111,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "myOgito:serve"
+            "devServerTarget": "ogito-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "myOgito:serve:production"
+              "devServerTarget": "ogito-app:serve:production"
             }
           }
         }
