add anonymous login for dev mode

--- a/src/assets/configuration/appsettings.json
+++ b/src/assets/configuration/appsettings.json
@@ -8,8 +8,9 @@
   "wmsVersion":  "1.3.0",
   "wfsVersion": "1.1.0",
   "srs": "EPSG:3857",
+  "requireAuth": false,
   "auth": {
-    "domain" :"domain",
-    "clientId": "clientid"
+    "domain" :"dev-123456789.us.auth0.com",
+    "clientId": "myClientId"
   }
 }
