edit projects config for starter

--- a/src/assets/configuration/projects.json
+++ b/src/assets/configuration/projects.json
@@ -2,7 +2,7 @@
 {
   "name": "OGITO Starter",
   "qgisProjectFilename": "ogito_starter.qgs",
-  "thumbnail": "https://raw.githubusercontent.com/rosaguilar/myogito/master/company_logo.png?token=GHSAT0AAAAAAB7UFEDR7ODZRUTTXZQS6BOUZCJJ5YA",
+  "thumbnail": "https://raw.githubusercontent.com/52North/OGITO/refs/heads/main/company_logo.png",
   "minZoom": 14,
   "maxZoom": 21,
   "initZoom": 15,
@@ -18,12 +18,14 @@
   },
   "sketchLayerPolygons": "sketch_polygons",
   "sketchLayerLinestrings": "sketch_linestrings",
-  "sketchLayerPoints": "sketch_points"
+  "sketchLayerPoints": "sketch_points",
+  "rateMeasureLayers": ["Rating"],
+  "labels": {"Rating":{"rankingA": "Ranking A", "rankingB": "Ranking B", "description": "Text"}}
 },
   {
     "name": "OGITO Starter copy",
     "qgisProjectFilename": "ogito_starter.qgs",
-    "thumbnail": "https://raw.githubusercontent.com/rosaguilar/myogito/master/company_logo.png?token=GHSAT0AAAAAAB7UFEDR7ODZRUTTXZQS6BOUZCJJ5YA",
+    "thumbnail": "https://raw.githubusercontent.com/52North/OGITO/refs/heads/main/company_logo.png",
     "minZoom": 10,
     "maxZoom": 21,
     "initZoom": 15,
@@ -33,6 +35,8 @@
     "centerWGS84": {"lat": 51.935, "lon": 7.6521},
     "sketchLayerPolygons": "sketch_polygons",
     "sketchLayerLinestrings": "sketch_linestrings",
-    "sketchLayerPoints": "sketch_points"
+    "sketchLayerPoints": "sketch_points",
+    "rateMeasureLayers": ["Rating"],
+    "labels": {"Rating":{"rankingA": "Ranking A", "rankingB": "Ranking B", "description": "Text"}}
   }
 ]
