update ogito starter

--- a/starter_project/docker/docker-compose.yml
+++ b/starter_project/docker/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   qgis_server:
     image: camptocamp/qgis-server:3.26
     volumes:
-      - './ogito_starter_docker.qgs:/etc/qgisserver/ogito_starter.qgs'
+      - '../ogito_starter.qgs:/etc/qgisserver/ogito_starter.qgs'
+      - './pg_service.conf:/etc/qgisserver/pg_service.conf'
     ports:
       - 8380:80
     depends_on:
@@ -16,6 +17,7 @@ services:
       - QGIS_AUTH_DB_DIR_PATH=/etc/qgisserver/
       - QGIS_SERVER_LOG_LEVEL=0
       - QGIS_SERVER_LANDING_PAGE_PROJECTS_DIRECTORIES=/etc/qgisserver
+      - PGSERVICEFILE=/etc/qgisserver/pg_service.conf
   db:
     image: postgis/postgis:16-3.4-alpine
     environment:
