--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
     "@auth0/auth0-spa-js": "^2.1.3",
-    "component": "^1.1.0",
     "fp-ts": "^2.16.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
@@ -32,7 +31,6 @@
     "ol": "6.5.0",
     "proj4": "^2.6.1",
     "rxjs": "~6.5.4",
-    "rxjs-compat": "^6.6.7",
     "simple-keyboard": "^3.2.63",
     "stream": "0.0.2",
     "timers": "^0.1.1",
@@ -44,7 +42,6 @@
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.2.10",
-    "@angular/language-service": "^15.2.10",
     "@types/hammerjs": "^2.0.39",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -57,10 +54,13 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "parcel-bundler": "^1.12.4",
     "protractor": "^7.0.0",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
+  },
+  "overrides": {
+    "glob@>=10.x <= 11.0.3": "^11.1.0",
+    "form-data@<2.5.4 ": "^2.5.4"
   }
 }
